# TaskularDo_Backend

./: README.md  pyproject.toml
config/: settings.py  urls.py
core/authentication/: admin.py
core/authentication/migrations/: 0001_initial.py
core/authentication/models/: user.py
core/authentication/serializers/: __init__.py  user.py
core/authentication/views/: __init__.py  user.py
core/management/commands/: migrate_db.py
core/taskulardo/: apps.py
